--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "mocha"
   },
   "dependencies": {
+    "@sentry/node": "^6.2.3",
+    "@sentry/tracing": "^6.2.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
